--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -88,10 +88,10 @@
 k cycle pause                          # toggle pause/playback mode
 . frame-step                           # advance one frame and pause
 , frame-back-step                      # go back by one frame and pause
-#SPACE cycle pause
-#> playlist-next                        # skip to next file
+SPACE cycle pause
+> playlist-next                        # skip to next file
 #ENTER playlist-next                    # skip to next file
-#< playlist-prev                        # skip to previous file
+< playlist-prev                        # skip to previous file
 #O no-osd cycle-values osd-level 3 1    # cycle through OSD mode
 #o show-progress
 #P show-progress
@@ -132,9 +132,9 @@ k cycle pause                          # toggle pause/playback mode
 # switch between applying no style overrides to SSA/ASS subtitles, and
 # overriding them almost completely with the normal subtitle style
 #u cycle-values sub-ass-override "force" "no"
-j cycle sub                            # cycle through subtitles
-J cycle sub down                       # ...backwards
-SHARP cycle audio                      # switch audio streams
+z cycle sub                            # cycle through subtitles
+Z cycle sub down                       # ...backwards
+x cycle audio                      # switch audio streams
 #_ cycle video
 #T cycle ontop                          # toggle video window ontop of other windows
 #f cycle fullscreen                     # toggle fullscreen
