--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -40,6 +40,7 @@
 #WHEEL_UP      seek 10
 #WHEEL_DOWN    seek -10
 #WHEEL_LEFT    add volume -2
+SPACE cycle pause
 #WHEEL_RIGHT   add volume 2
 
 ## Seek units are in seconds, but note that these are limited by keyframes
@@ -86,9 +87,9 @@
 #ESC set fullscreen no
 #ESC {encode} quit 4
 k cycle pause                          # toggle pause/playback mode
+SPACE cycle pause
 . frame-step                           # advance one frame and pause
 , frame-back-step                      # go back by one frame and pause
-SPACE cycle pause
 > playlist-next                        # skip to next file
 #ENTER playlist-next                    # skip to next file
 < playlist-prev                        # skip to previous file
@@ -135,6 +136,7 @@ SPACE cycle pause
 z cycle sub                            # cycle through subtitles
 Z cycle sub down                       # ...backwards
 x cycle audio                      # switch audio streams
+X cycle audio down                      # switch audio streams
 #_ cycle video
 #T cycle ontop                          # toggle video window ontop of other windows
 #f cycle fullscreen                     # toggle fullscreen
