New mpv keybindings and added picom.conf
m for sub delay, 0 and 9 for volume control. Deinterlace also added.

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -99,16 +99,16 @@ SPACE cycle pause
 #i script-binding stats/display-stats
 #I script-binding stats/display-stats-toggle
 #` script-binding console/enable
-#z add sub-delay -0.1                   # subtract 100 ms delay from subs
-#Z add sub-delay +0.1                   # add
+m add sub-delay -0.1                   # subtract 100 ms delay from subs
+M add sub-delay +0.1                   # add
 #x add sub-delay +0.1                   # same as previous binding (discouraged)
 #ctrl++ add audio-delay 0.100           # this changes audio/video sync
 #ctrl+- add audio-delay -0.100
 #Shift+g add sub-scale +0.1                  # increase subtitle font size
 #Shift+f add sub-scale -0.1                  # decrease subtitle font size
-#9 add volume -2
+9 add volume -2
 #/ add volume -2
-#0 add volume 2
+0 add volume 2
 #* add volume 2
 #m cycle mute
 #1 add contrast -1
@@ -123,7 +123,7 @@ SPACE cycle pause
 #Alt+1 set window-scale 1.0
 #Alt+2 set window-scale 2.0
 # toggle deinterlacer (automatically inserts or removes required filter)
-#d cycle deinterlace
+d cycle deinterlace
 #r add sub-pos -1                       # move subtitles up
 #R add sub-pos +1                       #                down
 #t add sub-pos +1                       # same as previous binding (discouraged)
