--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -24,10 +24,19 @@
 #
 # Profiles should be placed at the bottom of the configuration file to ensure
 # that settings wanted as defaults are not restricted to specific profiles.
+##################
+#    Shaders     #
+##################
+
+# glsl-shaders="~~/shaders/Anime4K_Denoise_Bilateral_Mode.glsl;~~/shaders/Anime4K_Upscale_CNN_M_x2_Deblur.glsl"
+glsl-shaders="~~/shaders/Anime4K_Denoise_Bilateral_Mode.glsl:~~/shaders/Anime4K_DarkLines_HQ.glsl:~~/shaders/Anime4K_ThinLines_HQ.glsl:~~/shaders/Anime4K_Upscale_CNN_M_x2_Deblur.glsl"
+# glsl-shaders="~~/shaders/Anime4K_Denoise_Bilateral_Mode.glsl:~~/shaders/Anime4K_Deblur_DoG.glsl:~~/shaders/Anime4K_DarkLines_HQ.glsl:~~/shaders/Anime4K_ThinLines_HQ.glsl:~~/shaders/Anime4K_Upscale_CNN_M_x2_Deblur.glsl"
 
 ##################
 # video settings #
 ##################
+
+screenshot-directory=~/pictures/mpv_screenshots
 
 # Start in fullscreen mode by default.
 fs=yes
