--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -101,6 +101,8 @@ SPACE cycle pause
 #` script-binding console/enable
 m add sub-delay -0.1                   # subtract 100 ms delay from subs
 M add sub-delay +0.1                   # add
+n add audio-delay -0.1			# subtract 100 ms delay from audio
+N add audio-delay +0.1			# add
 #x add sub-delay +0.1                   # same as previous binding (discouraged)
 #ctrl++ add audio-delay 0.100           # this changes audio/video sync
 #ctrl+- add audio-delay -0.100
